feat: rename to gossembrot-portal, add static: local env; add loading splash to prevent data base access before db ready

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,14 @@
 </head>
   <body>
     <app-root ngcsp=""></app-root>
+    <div id="app-splash">
+        <div class="splash-box">
+            <div class="splash-dots">
+                <span></span><span></span><span></span>
+            </div>
+            <div class="splash-text">Loading database…</div>
+        </div>
+    </div>
     <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 </html>
