--- a/src/index.prod.html
+++ b/src/index.prod.html
@@ -14,6 +14,6 @@
   </head>
   <body>
     <app-root ngcsp></app-root>
-    <img src="../../gossembrot-portal_eklog/eklog_logger.php" width="1" height="1" border="0">
+    <img alt="eklog" src="../../gossembrot-portal_eklog/eklog_logger.php" width="1" height="1" border="0">
   </body>
 </html>
